# krebstar

./: .gitignore  ChangeLog.md  LICENSE  README.md  ex.txt  index.md  krebdoc.config.json  krebstar.cabal  makefile  ned.cabal  stack.yaml  stdlib.txt  todo.txt
lib/kreb-arith/: kreb-arith.cabal  stack.yaml
lib/kreb-arith/src/Kreb/: Arith.lhs
lib/kreb-arith/src/Kreb/Arith/: Class.lhs  ZZFrac.lhs
lib/kreb-category/: kreb-category.cabal  stack.yaml
lib/kreb-category/src/Kreb/: Category.lhs
lib/kreb-category/src/Kreb/Category/: Class.lhs  Data.lhs
lib/kreb-category/src/Kreb/Category/Class/: BifunctorC.lhs  CategoryC.lhs  FunctorC.lhs  MonoidalActionC.lhs  MonoidalCategoryC.lhs  ProfunctorC.lhs  TraversableC.lhs
lib/kreb-category/src/Kreb/Category/Data/: ChoiceC.lhs  IdC.lhs  ListC.lhs  MaybeC.lhs  PairC.lhs
lib/kreb-category/src/Kreb/Control/: Constrained.lhs  Unconstrained.lhs
lib/kreb-category/src/Kreb/Control/Constrained/: Functor.lhs  Traversable.lhs
lib/kreb-category/test/Kreb/Category/: Test.lhs
lib/kreb-category/test/Kreb/Category/BifunctorC/: Test.lhs
lib/kreb-category/test/Kreb/Category/CategoryC/: Test.lhs
lib/kreb-category/test/Kreb/Category/MonoidalActionC/: Test.lhs
lib/kreb-category/test/Kreb/Category/MonoidalCategoryC/: Test.lhs
lib/kreb-category/test/Kreb/Category/ProfunctorC/: Test.lhs
lib/kreb-category/test/Kreb/Category/Test/: Suite.lhs
lib/kreb-control/: kreb-control.cabal
lib/kreb-control/src/Kreb/: Control.lhs
lib/kreb-control/src/Kreb/Control/: Compare.lhs  EqIn.lhs  Monad.lhs  Tuple.lhs
lib/kreb-control/src/Kreb/Control/Functor/: Compose.lhs
lib/kreb-control/src/Kreb/Control/Monad/: Flow.lhs  Identity.lhs  LiftIO.lhs  Trans.lhs
lib/kreb-editor/: kreb-editor.cabal  stack.yaml
lib/kreb-editor-core/: kreb-editor-core.cabal  stack.yaml
lib/kreb-editor-core/src/Kreb/Editor/Core/: Action.lhs  Mock.lhs  Monad.hs
lib/kreb-editor-core/test/Kreb/Editor/Core/: Test.lhs
lib/kreb-editor-tui/: kreb-editor-tui.cabal  stack.yaml
lib/kreb-editor-tui/src/Kreb/Editor/: TUI.lhs
lib/kreb-editor-tui/src/Kreb/Editor/TUI/: Data.lhs  Monad.lhs  Render.lhs  Run.hs
lib/kreb-editor/app/: Main.hs
lib/kreb-effect/: kreb-effect.cabal  stack.yaml
lib/kreb-effect/src/Kreb/: Effect.lhs
lib/kreb-effect/src/Kreb/Effect/: Data.lhs  Mock.lhs  Region.lhs
lib/kreb-format/: kreb-format.cabal  stack.yaml
lib/kreb-format/doctest/Kreb/Format/: DocTest.lhs
lib/kreb-format/doctest/Kreb/Format/DocTest/: Suite.lhs
lib/kreb-format/src/Kreb/: Format.lhs
lib/kreb-format/src/Kreb/Format/: Combinator.lhs  Display.lhs  Doc.lhs  Util.lhs
lib/kreb-lang/: kreb-lang.cabal  stack.yaml
lib/kreb-lang/app/kreblang/: Main.hs
lib/kreb-lang/golden/lang/module/data/: data01.test  data02.test  data05.test  data07.test  data08.test  data10.test  data11.test
lib/kreb-lang/golden/lang/module/define/: define01.test
lib/kreb-lang/golden/lang/module/empty/: char03.test  int02.test
lib/kreb-lang/src/Kreb/: Lang.lhs
lib/kreb-lang/src/Kreb/Lang/: Error.lhs  Expr.lhs  Interpreter.lhs  Lexer.hs  Lexer.x  Module.lhs  PrettyPrint.lhs  Runtime.lhs  Type.lhs  Value.lhs
lib/kreb-lang/test/Kreb/Lang/: Test.lhs
lib/kreb-lang/test/Kreb/Lang/Interpreter/: Test.lhs
lib/kreb-lang/test/Kreb/Lang/Module/: Test.lhs
lib/kreb-lang/test/Kreb/Lang/Parser/: Test.lhs
lib/kreb-lang/test/Kreb/Lang/Test/: Suite.lhs
lib/kreb-lang/test/Kreb/Lang/Type/: Test.lhs
lib/kreb-optics/: kreb-optics.cabal  stack.yaml
lib/kreb-optics/src/Kreb/: Optics.lhs
lib/kreb-optics/src/Kreb/Optics/: Base.lhs  Combinator.lhs  Optics.lhs
lib/kreb-optics/src/Kreb/Optics/Class/: Tambara.lhs
lib/kreb-pandoc/: Readme.md  kreb-pandoc.cabal  stack.yaml
lib/kreb-pandoc/app/KrebDoc/: Main.lhs
lib/kreb-pandoc/src/Kreb/: Pandoc.lhs
lib/kreb-pandoc/src/Kreb/Pandoc/: Anchor.lhs  Base.lhs  Sidenote.lhs  TikZ.lhs  Util.lhs
lib/kreb-prop/: kreb-prop.cabal
lib/kreb-prop/doctest/Kreb/Prop/: DocTest.lhs
lib/kreb-prop/doctest/Kreb/Prop/DocTest/: Suite.lhs
lib/kreb-prop/src/Kreb/: Prop.lhs
lib/kreb-prop/src/Kreb/Prop/: Alg.lhs  Arb.lhs  Build.lhs  Check.lhs  Class.lhs  Fun.lhs  Laws.lhs  Sample.lhs  StateMachine.lhs  Tasty.lhs  Tests.lhs
lib/kreb-prop/src/Kreb/Prop/Class/: FromZZ.lhs  MinMax.lhs  Positive.lhs
lib/kreb-prop/src/Kreb/Prop/Laws/: Eq.lhs  Foldable.lhs  Functor.lhs  Monoid.lhs  Ringlike.lhs  Semigroup.lhs
lib/kreb-prop/test/Kreb/Prop/: Test.lhs
lib/kreb-prop/test/Kreb/Prop/Test/: Suite.lhs
lib/kreb-reflect/: kreb-reflect.cabal  stack.yaml
lib/kreb-reflect/src/Kreb/Reflect/: Nat.lhs
lib/kreb-reflect/test/Kreb/Reflect/: Test.lhs
lib/kreb-reflect/test/Kreb/Reflect/Nat/: Test.lhs
lib/kreb-reflect/test/Kreb/Reflect/Test/: Suite.lhs
lib/kreb-struct/: kreb-struct.cabal  stack.yaml
lib/kreb-struct/doctest/Kreb/Struct/: DocTest.lhs
lib/kreb-struct/doctest/Kreb/Struct/DocTest/: Suite.lhs
lib/kreb-struct/src/Kreb/: Struct.lhs
lib/kreb-struct/src/Kreb/Struct/: Class.lhs  Data.lhs
lib/kreb-struct/src/Kreb/Struct/Class/: Cons.lhs  Container.lhs  FromList.lhs  Ideal.lhs  NonEmpty.lhs  Reverse.lhs  Singleton.lhs  Subset.lhs  Valued.lhs  Zipper.lhs
lib/kreb-struct/src/Kreb/Struct/Data/: Deque.lhs  FingerTree.lhs  FiniteMap.lhs  RedBlackTree.lhs  RunLengthEncoded.lhs  Seq.lhs  StemTree.lhs  TwoPointedList.lhs  Zipper.lhs
lib/kreb-struct/test/Kreb/Struct/: Test.lhs
lib/kreb-struct/test/Kreb/Struct/FiniteMap/: Test.lhs
lib/kreb-struct/test/Kreb/Struct/Test/: Suite.lhs
lib/kreb-text/: kreb-text.cabal  stack.yaml
lib/kreb-text/doctest/Kreb/Text/: DocTest.lhs
lib/kreb-text/src/Kreb/: Text.lhs
lib/kreb-text/src/Kreb/Text/: Buffer.lhs  BufferModel.lhs  BufferOp.lhs  Cell.lhs  CursorWord.lhs  Glyph.lhs  Grapheme.lhs  MeasureText.lhs  Pigment.lhs  Rune.lhs  ScreenOffset.lhs  SizedBuffer.lhs  TextBox.lhs
lib/kreb-unit/: kreb-unit.cabal  stack.yaml
lib/kreb-unit/doctest/Kreb/Unit/: DocTest.lhs
lib/kreb-unit/src/Kreb/: Unit.lhs
lib/kreb-unit/src/Kreb/Unit/: Declarable.lhs  Declare.lhs  Helpers.lhs  Tasty.lhs
lib/kreb-unit/test/Kreb/Unit/: Test.lhs
(+404 files in other folders)
