cabal-version:  2.4
name:           krebstar
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar



-- ========== --
-- Kreb Check --
-- ========== --

library kreb-check
  default-language: Haskell2010
  hs-source-dirs: src/check
  exposed-modules:
      Kreb.Check
    , Kreb.Check.Seeded
    , Kreb.Check.Arb
    , Kreb.Check.Check
    , Kreb.Check.Tests
    , Kreb.Check.Tasty
    , Kreb.Check.Alg
    , Kreb.Check.Fun
    , Kreb.Check.Build
    , Kreb.Check.StateMachine
    , Kreb.Check.Laws
    , Kreb.Check.Laws.Eq
    , Kreb.Check.Laws.Semigroup
    , Kreb.Check.Laws.Monoid
    , Kreb.Check.Laws.Functor
    , Kreb.Check.Laws.Foldable
    , Kreb.Check.Laws.Ringlike
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2
    , random >=1.1

test-suite kreb-check-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/check
  other-modules:
      Kreb.Check.Test.Suite
  main-is: Kreb/Check/Test.lhs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2

    , kreb-check



-- ============ --
-- Kreb Control --
-- ============ --

library kreb-control
  default-language: Haskell2010
  hs-source-dirs: src/control
  exposed-modules:
      Kreb.Control
    , Kreb.Control.LocalSt
    , Kreb.Control.Identity
    , Kreb.Control.LiftIO
    , Kreb.Control.Trans.Class
    , Kreb.Control.Trans.StateT
    , Kreb.Control.Trans.EnvT
    , Kreb.Control.Trans.ReplT
  build-depends:
      base >=4.7 && <5



-- =========== --
-- Kreb Format --
-- =========== --

library kreb-format
  default-language: Haskell2010
  hs-source-dirs: src/format
  exposed-modules:
      Kreb.Format
  build-depends:
      base >=4.7 && <5
    , text >=1.2.3.1



-- ============ --
-- Kreb Reflect --
-- ============ --

library kreb-reflect
  default-language: Haskell2010
  hs-source-dirs: src/reflect
  exposed-modules:
      Kreb.Reflect
    , Kreb.Reflect.Nat
  build-depends:
      base >=4.7 && <5

test-suite kreb-reflect-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/reflect
  main-is: Kreb/Reflect/Test.lhs
  other-modules:
      Kreb.Reflect.Test.Suite
    , Kreb.Reflect.Nat.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2

    , kreb-check
    , kreb-reflect



-- =========== --
-- Kreb Struct --
-- =========== --

library kreb-struct
  default-language: Haskell2010
  hs-source-dirs: src/struct
  exposed-modules:
      Kreb.Struct
    , Kreb.Struct.Valued
    , Kreb.Struct.FingerTree
    , Kreb.Struct.OnePointedList
    , Kreb.Struct.TwoPointedList
    , Kreb.Struct.Sequence
    , Kreb.Struct.RunLengthEncoded
    , Kreb.Struct.RoseTree
    , Kreb.Struct.PointedRoseTree
    , Kreb.Struct.RedBlackTree
    , Kreb.Struct.FiniteMap
  build-depends:
      base >=4.7 && <5

    , kreb-check

test-suite kreb-struct-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/struct
  main-is: Kreb/Struct/Test.lhs
  other-modules:
      Kreb.Struct.Test.Suite
    , Kreb.Struct.FingerTree.Test
    , Kreb.Struct.OnePointedList.Test
    , Kreb.Struct.TwoPointedList.Test
    , Kreb.Struct.Sequence.Test
    , Kreb.Struct.RunLengthEncoded.Test
    , Kreb.Struct.RoseTree.Test
    , Kreb.Struct.PointedRoseTree.Test
    , Kreb.Struct.RedBlackTree.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty >=1.2

    , kreb-check
    , kreb-struct



-- =========== --
-- Kreb Effect --
-- =========== --

library kreb-effect
  default-language: Haskell2010
  hs-source-dirs: src/effect
  exposed-modules:
      Kreb.Effect
    , Kreb.Effect.Data
    , Kreb.Effect.Mock
  build-depends:
      base >=4.7 && <5
    , time >=1.8.0.2
    , kreb-struct
    , kreb-check
    , kreb-control



-- ========= --
-- Kreb Text --
-- ========= --

library kreb-text
  default-language: Haskell2010
  hs-source-dirs: src/text
  exposed-modules:
      Kreb.Text
    , Kreb.Text.ScreenOffset
    , Kreb.Text.Rune
    , Kreb.Text.MeasureText
    , Kreb.Text.Pigment
    , Kreb.Text.Glyph
    , Kreb.Text.Cell
    , Kreb.Text.Buffer
    , Kreb.Text.SizedBuffer
    , Kreb.Text.TextBox
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1

    , kreb-check
    , kreb-effect
    , kreb-reflect
    , kreb-control
    , kreb-struct

test-suite kreb-text-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/text, test/struct
  main-is: Kreb/Text/Test.lhs
  other-modules:
      Kreb.Text.Test.Suite
    , Kreb.Text.ScreenOffset.Test
    , Kreb.Text.Rune.Test
    , Kreb.Text.MeasureText.Test
    , Kreb.Text.Glyph.Test
    , Kreb.Text.Buffer.Test
    , Kreb.Text.TextBox.Test

    , Kreb.Struct.FingerTree.Test
    , Kreb.Struct.OnePointedList.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2

    , kreb-check
    , kreb-reflect
    , kreb-struct
    , kreb-text



-- ========= --
-- Kreb Lang --
-- ========= --

library kreb-lang
  default-language: Haskell2010
  build-tools: alex, happy
  hs-source-dirs: src/lang
  exposed-modules:
      Kreb.Lang
    , Kreb.Lang.PrettyPrint
    , Kreb.Lang.Loc
    , Kreb.Lang.Expr
    , Kreb.Lang.Type
    , Kreb.Lang.Value
    , Kreb.Lang.Module
    , Kreb.Lang.Lexer
    , Kreb.Lang.Parser
    , Kreb.Lang.Runtime
    , Kreb.Lang.Interpreter
    , Kreb.Lang.Error
    , Kreb.Lang.LexicalGrammar
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , containers >=0.6.0.1

    , kreb-check
    , kreb-format
    , kreb-text

test-suite kreb-lang-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/lang
  main-is: Kreb/Lang/Test.lhs
  other-modules:
      Kreb.Lang.Test.Suite
    , Kreb.Lang.Type.Test
    , Kreb.Lang.Module.Test
    , Kreb.Lang.Interpreter.Test
    , Kreb.Lang.Parser.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2

    , kreb-check
    , kreb-lang
    , kreb-text



-- ================ --
-- Kreb Editor Core --
-- ================ --

library kreb-editor-core
  default-language: Haskell2010
  hs-source-dirs: src/editor-core
  exposed-modules:
      Kreb.Editor.Core
    , Kreb.Editor.Core.Action
    , Kreb.Editor.Core.Monad
    , Kreb.Editor.Core.Mock
    , Kreb.Editor.Core.Data
    , Kreb.Editor.Core.Data.Panel
    , Kreb.Editor.Core.Data.Settings
    , Kreb.Editor.Core.Data.Tab
    , Kreb.Editor.Core.Data.State
    , Kreb.Editor.Core.Data.Env
    , Kreb.Editor.Core.Data.Preferences
    , Kreb.Editor.Core.Data.Signal
    , Kreb.Editor.Core.Data.Action
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.8.10.2

    , kreb-format
    , kreb-effect
    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-lang

test-suite kreb-editor-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/editor-core
  main-is: Kreb/Editor/Core/Test.lhs
  other-modules:
      Kreb.Editor.Core.Test.Suite
    , Kreb.Editor.Core.Panel.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2

    , kreb-check
    , kreb-text
    , kreb-lang
    , kreb-editor-core



-- =============== --
-- Kreb Editor TUI --
-- =============== --

library kreb-editor-tui
  default-language: Haskell2010
  hs-source-dirs: src/editor-tui
  exposed-modules:
      Kreb.Editor.TUI
    , Kreb.Editor.TUI.Run
    , Kreb.Editor.TUI.Render
    , Kreb.Editor.TUI.Handler
    , Kreb.Editor.TUI.Monad
    , Kreb.Editor.TUI.Layout
  build-depends:
      base >=4.7 && <5
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , array >=0.5.3.0

    , kreb-reflect
    , kreb-effect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-lang
    , kreb-editor-core



-- ========= --
-- Kreb Demo --
-- ========= --

library
  default-language: Haskell2010
  exposed-modules:
      Kreb.Demo
  hs-source-dirs: src/demo
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1

    , kreb-check
    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-lang
    , kreb-editor-core





executable krebedit
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app/krebedit
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , array >= 0.5.3.0
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1
    , text >=1.2.3.1

    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text
    , kreb-editor-core
    , kreb-editor-tui

executable kreblang
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app/kreblang
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-lang
    , kreb-text



test-suite doctests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-tools: alex, happy
  ghc-options:
    -threaded
  main-is: Kreb/DocTest/Test.lhs
  other-modules:
      Kreb.DocTest.Test.Suite
    , Kreb.Lang.Lexer
    , Kreb.Lang.Parser
    , Kreb.Lang.Error
    , Kreb.Lang.Expr
    , Kreb.Lang.LexicalGrammar
    , Kreb.Lang.Loc 
    , Kreb.Lang.Module
    , Kreb.Lang.PrettyPrint
    , Kreb.Lang.Runtime
    , Kreb.Lang.Type
    , Kreb.Lang.Value
  build-depends:
      base >4 && <5
    , kreb-check
    , kreb-effect
    , kreb-reflect
    , kreb-struct
    , kreb-text
    , kreb-format
    , kreb-lang
    , kreb-editor-core
    , doctest >=0.16.0.1
    , containers >=0.6.0.1
    , text >=1.2.3.1
    , array >=0.5.3.0
  hs-source-dirs:
      test/doctest
    , src/lang



test-suite kreb-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test/all
    , test/check
    , test/reflect
    , test/struct
    , test/text
    , test/lang
    , test/editor-core
    , test/doctest
  main-is: Test.lhs
  other-modules:
      Kreb.Check.Test.Suite
    , Kreb.Reflect.Test.Suite
    , Kreb.Struct.Test.Suite
    , Kreb.Text.Test.Suite
    , Kreb.Lang.Test.Suite
    , Kreb.Editor.Core.Test.Suite
    , Kreb.DocTest.Test.Suite

    , Kreb.Lang.Interpreter.Test
    , Kreb.Lang.Module.Test
    , Kreb.Lang.Parser.Test
    , Kreb.Lang.Type.Test
    , Kreb.Reflect.Nat.Test
    , Kreb.Struct.FingerTree.Test
    , Kreb.Struct.OnePointedList.Test
    , Kreb.Struct.TwoPointedList.Test
    , Kreb.Struct.RunLengthEncoded.Test
    , Kreb.Struct.Sequence.Test
    , Kreb.Struct.RoseTree.Test
    , Kreb.Struct.PointedRoseTree.Test
    , Kreb.Struct.RedBlackTree.Test
    , Kreb.Struct.FiniteMap.Test
    , Kreb.Text.Buffer.Test
    , Kreb.Text.Glyph.Test
    , Kreb.Text.Rune.Test
    , Kreb.Text.MeasureText.Test
    , Kreb.Text.ScreenOffset.Test
    , Kreb.Text.TextBox.Test
    , Kreb.Editor.Core.Data.Panel.Test
    , Kreb.Editor.Core.Mock.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , tasty >=1.2
    , doctest >=0.16.0.1

    , kreb-check
    , kreb-control
    , kreb-reflect
    , kreb-struct
    , kreb-text
    , kreb-lang
    , kreb-editor-core
    , kreb-effect
