cabal-version:  2.4
name:           ned
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/ned#readme>
homepage:       https://github.com/nbloomf/ned#readme
bug-reports:    https://github.com/nbloomf/ned/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/ned



library
  default-language: Haskell2010
  build-tools: alex, happy
  exposed-modules:
      Ned
    , Ned.Debug
    , Ned.Data
    , Ned.Data.FingerTree
    , Ned.Data.FingerTreeZip
    , Ned.Data.Seq
    , Ned.Data.RunLengthEncoding
    , Ned.Data.ReflectNat
    , Ned.Data.ScreenOffset
    , Ned.Data.MeasureText
    , Ned.Data.Glyph
    , Ned.Data.Buffer

    , Ned.Data.LocalSt

    , Ned.Data.TextBox
    , Ned.Data.Panel
    , Ned.Data.Tile
    , Ned.Data.Tab
    , Ned.Data.Hooks

    , Lang.Data.Lexer
    , Lang.Data.Parser

    , Ned.Data.Settings

    , Ned.Monad

    , Lang
    , Lang.Data.PrettyPrint
    , Lang.Data.Loc
    , Lang.Data.Expr
    , Lang.Data.Type
    , Lang.Data.Value
    , Lang.Data.Module

    , Lang.Data.Runtime

    , Lang.Data.Interpreter

    , Lang.Data.Error

    , Lang.Data.LexicalGrammar


    , Ned.App
    , Ned.App.Event
    , Ned.App.State
    , Ned.App.Handler
    , Ned.App.Error
    , Ned.App.Action
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1



executable ned
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Ned.App.IO
    , Ned.App.IO.Event
    , Ned.App.IO.Render
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , bytestring >=0.8.10.2

executable lang
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Lang.App.IO
  hs-source-dirs: lang
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned



test-suite ned-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Ned.Data.FingerTree.Test
    , Ned.Data.FingerTreeZip.Test
    , Ned.Data.Buffer.Test
    , Ned.Data.Glyph.Test
    , Ned.Data.RunLengthEncoding.Test
    , Ned.Data.ScreenOffset.Test
    , Ned.Data.ReflectNat.Test
    , Ned.Data.MeasureText.Test
    , Ned.Data.TextBox.Test
    , Ned.Data.Seq.Test

    , Lang.Data.Type.Test
    , Lang.Data.Module.Test
    , Lang.Data.Interpreter.Test
    , Lang.Data.Parser.Test
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned
    , QuickCheck >=2.12.6.1
    , tasty >=1.2
    , tasty-quickcheck >=0.10.1
    , containers >=0.6.0.1
