cabal-version:  2.4
name:           ned
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar



common test-deps
  build-depends:
      QuickCheck >=2.12.6.1
    , tasty >=1.2
    , tasty-quickcheck >=0.10.1



-- ========== --
-- Kreb Check --
-- ========== --

library kreb-check
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Check
  build-depends:
      base >=4.7 && <5
    , QuickCheck >=2.12.6.1
    , tasty >=1.2
    , tasty-quickcheck >=0.10.1

common kreb-check-mod
  other-modules:
      Kreb.Check



-- ============ --
-- Kreb Reflect --
-- ============ --

library kreb-reflect
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Reflect
    , Kreb.Reflect.Nat
  build-depends:
      base >=4.7 && <5

common kreb-reflect-mod
  other-modules:
      Kreb.Reflect
    , Kreb.Reflect.Nat

test-suite kreb-reflect-test
  import: test-deps
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Reflect/Test.lhs
  other-modules:
      Kreb.Reflect.Nat.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-reflect



-- =========== --
-- Kreb Struct --
-- =========== --

library kreb-struct
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Struct
    , Kreb.Struct.FingerTree
    , Kreb.Struct.FingerTreeZip
    , Kreb.Struct.Seq
    , Kreb.Struct.RunLengthEncoding
  build-depends:
      base >=4.7 && <5

common kreb-struct-mod
  other-modules:
      Kreb.Struct
    , Kreb.Struct.FingerTree
    , Kreb.Struct.FingerTreeZip
    , Kreb.Struct.Seq
    , Kreb.Struct.RunLengthEncoding

test-suite kreb-struct-test
  import:
      test-deps
    , kreb-check-mod
    , kreb-struct-mod
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Kreb/Struct/Test.lhs
  other-modules:
      Kreb.Struct.FingerTree.Test
    , Kreb.Struct.FingerTreeZip.Test
    , Kreb.Struct.Seq.Test
    , Kreb.Struct.RunLengthEncoding.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-struct





library
  import:
      kreb-reflect-mod
    , kreb-struct-mod
  default-language: Haskell2010
  build-tools: alex, happy
  exposed-modules:
      Ned
    , Ned.Debug
    , Ned.Data

    , Ned.Data.ScreenOffset
    , Ned.Data.MeasureText
    , Ned.Data.Glyph
    , Ned.Data.Buffer

    , Ned.Data.LocalSt

    , Ned.Data.TextBox
    , Ned.Data.Panel
    , Ned.Data.Tile
    , Ned.Data.Tab

    , Lang.Data.Lexer
    , Lang.Data.Parser

    , Ned.Data.Settings

    , Ned.Monad

    , Lang
    , Lang.Data.PrettyPrint
    , Lang.Data.Loc
    , Lang.Data.Expr
    , Lang.Data.Type
    , Lang.Data.Value
    , Lang.Data.Module

    , Lang.Data.Runtime

    , Lang.Data.Interpreter

    , Lang.Data.Error

    , Lang.Data.LexicalGrammar


    , Ned.App
    , Ned.App.Event
    , Ned.App.State
    , Ned.App.Handler
    , Ned.App.Error
    , Ned.App.Action
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1

    , kreb-reflect





executable ned
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Ned.App.IO
    , Ned.App.IO.Event
    , Ned.App.IO.Render
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , bytestring >=0.8.10.2

executable lang
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Lang.App.IO
  hs-source-dirs: lang
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned



test-suite ned-test
  import:
      test-deps
    , kreb-check-mod
    , kreb-reflect-mod
    , kreb-struct-mod
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Lang.Data.Expr
    , Lang.Data.PrettyPrint
    , Lang.Data.Type
    , Ned.Data.Buffer.Test
    , Ned.Data.Glyph.Test
    , Ned.Data.ScreenOffset.Test
    , Ned.Data.MeasureText.Test
    , Ned.Data.TextBox.Test

    , Lang
    , Lang.Data.Error
    , Lang.Data.Interpreter
    , Lang.Data.LexicalGrammar
    , Lang.Data.Loc
    , Lang.Data.Module
    , Lang.Data.Runtime
    , Lang.Data.Value
    , Lang.Data.Lexer
    , Lang.Data.Parser
    , Ned.Data
    , Ned.Data.Buffer
    , Ned.Data.Glyph
    , Ned.App.Hooks
    , Ned.Data.LocalSt
    , Ned.Data.MeasureText
    , Ned.Data.Panel
    , Ned.Data.ScreenOffset

    , Ned.Data.Settings
    , Ned.Data.Tab
    , Ned.Data.TextBox
    , Ned.Data.Tile

    , Kreb.Struct.FingerTree.Test
    , Kreb.Struct.FingerTreeZip.Test
    , Kreb.Struct.RunLengthEncoding.Test

    , Lang.Data.Type.Test
    , Lang.Data.Module.Test
    , Lang.Data.Interpreter.Test
    , Lang.Data.Parser.Test
  hs-source-dirs: test, src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , array >= 0.5.3.0
    , text >=1.2.3.1
