cabal-version:  2.4
name:           ned
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar



common test-deps
  build-depends:
      QuickCheck >=2.12.6.1
    , tasty >=1.2
    , tasty-quickcheck >=0.10.1



-- ========== --
-- Kreb Check --
-- ========== --

library kreb-check
  default-language: Haskell2010
  hs-source-dirs: src/check
  exposed-modules:
      Kreb.Check
  build-depends:
      base >=4.7 && <5
    , QuickCheck >=2.12.6.1
    , tasty >=1.2
    , tasty-quickcheck >=0.10.1



-- ============ --
-- Kreb Control --
-- ============ --

library kreb-control
  default-language: Haskell2010
  hs-source-dirs: src/control
  exposed-modules:
      Kreb.Control
    , Kreb.Control.LocalSt
  build-depends:
      base >=4.7 && <5



-- =========== --
-- Kreb Format --
-- =========== --

library kreb-format
  default-language: Haskell2010
  hs-source-dirs: src/format
  exposed-modules:
      Kreb.Format
  build-depends:
      base >=4.7 && <5
    , text >=1.2.3.1



-- ============ --
-- Kreb Reflect --
-- ============ --

library kreb-reflect
  default-language: Haskell2010
  hs-source-dirs: src/reflect
  exposed-modules:
      Kreb.Reflect
    , Kreb.Reflect.Nat
  build-depends:
      base >=4.7 && <5

test-suite kreb-reflect-test
  import: test-deps
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Kreb/Reflect/Test.lhs
  other-modules:
      Kreb.Reflect.Nat.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-reflect



-- =========== --
-- Kreb Struct --
-- =========== --

library kreb-struct
  default-language: Haskell2010
  hs-source-dirs: src/struct
  exposed-modules:
      Kreb.Struct
    , Kreb.Struct.FingerTree
    , Kreb.Struct.FingerTreeZip
    , Kreb.Struct.Seq
    , Kreb.Struct.RunLengthEncoding
  build-depends:
      base >=4.7 && <5

test-suite kreb-struct-test
  import:
      test-deps
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Kreb/Struct/Test.lhs
  other-modules:
      Kreb.Struct.FingerTree.Test
    , Kreb.Struct.FingerTreeZip.Test
    , Kreb.Struct.Seq.Test
    , Kreb.Struct.RunLengthEncoding.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , kreb-check
    , kreb-struct



-- ========= --
-- Kreb Text --
-- ========= --

library kreb-text
  default-language: Haskell2010
  hs-source-dirs: src/text
  exposed-modules:
      Kreb.Text
    , Kreb.Text.ScreenOffset
    , Kreb.Text.MeasureText
    , Kreb.Text.Glyph
    , Kreb.Text.Buffer
    , Kreb.Text.TextBox
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , kreb-reflect
    , kreb-control
    , kreb-struct

test-suite kreb-text-test
  import:
      test-deps
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Kreb/Text/Test.lhs
  other-modules:
      Kreb.Text.ScreenOffset.Test
    , Kreb.Text.MeasureText.Test
    , Kreb.Text.Glyph.Test
    , Kreb.Text.Buffer.Test
    , Kreb.Text.TextBox.Test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1

    , kreb-check
    , kreb-reflect
    , kreb-struct
    , kreb-text



library
  default-language: Haskell2010
  build-tools: alex, happy
  exposed-modules:
      Ned
    , Ned.Debug
    , Ned.Data

    , Ned.Data.Panel
    , Ned.Data.Tile
    , Ned.Data.Tab

    , Lang.Data.Lexer
    , Lang.Data.Parser

    , Ned.Data.Settings

    , Ned.Monad

    , Lang
    , Lang.Data.PrettyPrint
    , Lang.Data.Loc
    , Lang.Data.Expr
    , Lang.Data.Type
    , Lang.Data.Value
    , Lang.Data.Module

    , Lang.Data.Runtime

    , Lang.Data.Interpreter

    , Lang.Data.Error

    , Lang.Data.LexicalGrammar


    , Ned.App
    , Ned.App.Event
    , Ned.App.State
    , Ned.App.Handler
    , Ned.App.Error
    , Ned.App.Action
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , array >= 0.5.3.0
    , text >=1.2.3.1
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1

    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text





executable ned
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Ned.App.IO
    , Ned.App.IO.Event
    , Ned.App.IO.Render

    , Ned
    , Ned.Debug
    , Ned.Data

    , Ned.Data.Panel
    , Ned.Data.Tile
    , Ned.Data.Tab

    , Lang.Data.Lexer
    , Lang.Data.Parser

    , Ned.Data.Settings

    , Ned.Monad

    , Lang
    , Lang.Data.PrettyPrint
    , Lang.Data.Loc
    , Lang.Data.Expr
    , Lang.Data.Type
    , Lang.Data.Value
    , Lang.Data.Module

    , Lang.Data.Runtime

    , Lang.Data.Interpreter

    , Lang.Data.Error

    , Lang.Data.LexicalGrammar


    , Ned.App
    , Ned.App.Event
    , Ned.App.State
    , Ned.App.Handler
    , Ned.App.Error
    , Ned.App.Action
  hs-source-dirs: app, src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned
    , vty >=5.25.1
    , terminal-size >=0.3.2.1
    , array >= 0.5.3.0
    , bytestring >=0.8.10.2
    , containers >=0.6.0.1
    , text >=1.2.3.1
    , bytestring >=0.8.10.2

    , kreb-reflect
    , kreb-control
    , kreb-struct
    , kreb-text

executable lang
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Lang.App.IO
  hs-source-dirs: lang
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ned



test-suite ned-test
  import:
      test-deps
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Lang.Data.Expr
    , Lang.Data.PrettyPrint
    , Lang.Data.Type


    , Lang
    , Lang.Data.Error
    , Lang.Data.Interpreter
    , Lang.Data.LexicalGrammar
    , Lang.Data.Loc
    , Lang.Data.Module
    , Lang.Data.Runtime
    , Lang.Data.Value
    , Lang.Data.Lexer
    , Lang.Data.Parser
    , Ned.Data
    , Ned.Data.Panel

    , Ned.Data.Settings
    , Ned.Data.Tab
    , Ned.Data.Tile

    , Kreb.Struct.FingerTree.Test
    , Kreb.Struct.FingerTreeZip.Test
    , Kreb.Struct.RunLengthEncoding.Test

    , Lang.Data.Type.Test
    , Lang.Data.Module.Test
    , Lang.Data.Interpreter.Test
    , Lang.Data.Parser.Test
  hs-source-dirs: test, src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6.0.1
    , array >= 0.5.3.0
    , text >=1.2.3.1

    , kreb-check
    , kreb-reflect
    , kreb-struct
    , kreb-text
