cabal-version:  2.4
name:           kreb-arith
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Kreb.Arith
    , Kreb.Arith.Class
    , Kreb.Arith.ZZFrac
  default-extensions:
      ScopedTypeVariables
    , InstanceSigs
    , RankNTypes
    , KindSignatures
    , GADTs
    , TypeFamilies
  build-depends:
      base >=4.7 && <5
    , kreb-format
    , kreb-prop
    , kreb-reflect
