cabal-version:  2.4
name:           kreb-control
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/krebstar#readme>
homepage:       https://github.com/nbloomf/krebstar#readme
bug-reports:    https://github.com/nbloomf/krebstar/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/krebstar

library
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions:
      KindSignatures
    , ScopedTypeVariables
    , MultiParamTypeClasses
    , AllowAmbiguousTypes
    , TypeApplications
    , FlexibleInstances
    , FlexibleContexts
    , ConstraintKinds
    , TypeFamilies
    , InstanceSigs
    , RankNTypes
    , GADTs
  exposed-modules:
      Kreb.Control
    , Kreb.Control.EqIn
    , Kreb.Control.Compare
    , Kreb.Control.Functor.Compose
    , Kreb.Control.Monad
    , Kreb.Control.Monad.Flow
    , Kreb.Control.Monad.Identity
    , Kreb.Control.Monad.LiftIO
    , Kreb.Control.Monad.Trans
    , Kreb.Control.Monad.Trans.EnvT
    , Kreb.Control.Monad.Trans.StateT
    , Kreb.Control.Monad.Trans.StreamT
    , Kreb.Control.Monad.Trans.ReplT
    , Kreb.Control.Tuple
  other-modules:
      Kreb.Control.Monad.Trans.EnvT.Proofs
    , Kreb.Control.Monad.Trans.StateT.Proofs
    , Kreb.Control.Monad.Trans.StreamT.Proofs
  build-depends:
      base >=4.7 && <5
